force-app/main/default/objects/Question_Bank__c/Question_Bank__c.object-meta.xml
<CustomObject>
    <label>Question Bank</label>
    <nameField>
        <displayFormat>QB-{0000000}</displayFormat>
        <label>Question Bank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>