force-app/main/default/objects/Question_Bank__c/fields/Choice_B__c.field-meta.xml
<CustomField>
    <fullName>Choice_B__c</fullName>
    <label>Choice B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>