force-app/main/default/objects/Question_Bank__c/fields/Multiple_Choice_Answer__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Choice_Answer__c</fullName>
    <label>Multiple Choice Answer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>