force-app/main/default/objects/Question_Bank__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Single_Choice&apos;,  $Label.Single_Choice_Question , 
 IF(RecordType.DeveloperName == &apos;Multiple_Choice&apos;, $Label.Multiple_Choice_Question,  
 IF(RecordType.DeveloperName == &apos;Judgment_Question&apos;, $Label.Judgment_Question, $Label.Subjective_Questions) 
) 
)</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>