force-app/main/default/objects/Question_Bank__c/fields/Single_Answer__c.field-meta.xml
<CustomField>
    <fullName>Single_Answer__c</fullName>
    <label>Single Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>