force-app/main/default/objects/Question_Bank__c/fields/Title_Type__c.field-meta.xml
<CustomField>
    <fullName>Title_Type__c</fullName>
    <label>Title Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>巡店试题</fullName>
            </value>
            <value>
                <fullName>客户试题</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>