force-app/main/default/objects/Question_Bank__c/fields/True_answer__c.field-meta.xml
<CustomField>
    <fullName>True_answer__c</fullName>
    <label>True answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>