force-app/main/default/objects/Question_Bank__c/recordTypes/Judgment_Question.recordType-meta.xml
<RecordType>
    <fullName>Judgment_Question</fullName>
    <active>true</active>
    <label>Judgment Question</label>
</RecordType>