force-app/main/default/objects/Question_Bank__c/recordTypes/Multiple_Choice.recordType-meta.xml
<RecordType>
    <fullName>Multiple_Choice</fullName>
    <active>true</active>
    <label>Multiple Choice</label>
</RecordType>