force-app/main/default/objects/Question_Bank__c/recordTypes/Single_Choice.recordType-meta.xml
<RecordType>
    <fullName>Single_Choice</fullName>
    <active>true</active>
    <label>Single Choice</label>
</RecordType>