force-app/main/default/objects/Question_Bank__c/recordTypes/Subjective_Questions.recordType-meta.xml
<RecordType>
    <fullName>Subjective_Questions</fullName>
    <active>true</active>
    <label>Subjective Questions</label>
</RecordType>