force-app/main/default/objects/Question_Bank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Title_Type__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>